fixes bug 189779 "crashes quitting [@ nsDiskCacheOutputStream::~nsDiskCacheOutputStream]" r=kaie sr=bz